Conteúdo na página index.html

--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 	<head><title>Trabalhando com GIT</title></head>
 	<body>
 
+		<h1>Projeto Git</h1>
+		<p>Primeira modificação de arquivo</p>
+
 	</body>>
 </html>
