Adicionando estilo para página index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!doctype>
 <html>
-	<head><title>Trabalhando com GIT</title></head>
+	<head>
+
+		<title>Trabalhando com GIT</title>
+		<link rel="stylesheet" type="text/css" href="/design.css"/>
+		
+	</head>
+
 	<body>
 
 		<h1>Projeto Git</h1>
 		<p>Primeira modificação de arquivo</p>
-
+		<p>Segunda modificação de arquivo</p>
 	</body>>
 </html>
